<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center"
    android:weightSum="5"
    android:background="@drawable/img_20180612_124852_430"
    tools:context=".Main2Activity">
    <Button
        android:id="@+id/lay2button1id"
        android:layout_weight="1"
        android:text="@string/lay2button1_name"
        android:layout_width="250dp"
        android:layout_height="0dp"
        android:textSize="30sp"
        android:background="@color/buttoncolor"
        android:layout_margin="25dp"
        />
    <Button
        android:id="@+id/lay2button2id"
        android:layout_weight="1"
        android:text="@string/lay2button2_name"
        android:layout_width="250dp"
        android:layout_height="0dp"
        android:textSize="30sp"
        android:background="@color/buttoncolor"
        android:layout_margin="25dp"
        />
    <Button
        android:id="@+id/lay2button3id"
        android:layout_weight="1"
        android:text="@string/lay2button3_name"
        android:layout_width="250dp"
        android:layout_height="0dp"
        android:textSize="30sp"
        android:background="@color/buttoncolor"
        android:layout_margin="25dp"
        />
    <Button
        android:id="@+id/lay2button4id"
        android:layout_weight="1"
        android:text="@string/lay2button4_name"
        android:layout_width="250dp"
        android:layout_height="0dp"
        android:textSize="30sp"
        android:background="@color/buttoncolor"
        android:layout_margin="25dp"
        />
    <Button
        android:id="@+id/lay2button5id"
        android:layout_weight="1"
        android:text="@string/lay2button5_name"
        android:layout_width="250dp"
        android:layout_height="0dp"
        android:textSize="30sp"
        android:background="@color/buttoncolor"
        android:layout_margin="25dp"
        />

</LinearLayout>